# streaming-sentiment-analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sh  main.py  pyproject.toml
playground/: example.py
src/: cfg.py  utils.py
src/batch_producer/: __init__.py  batch_producer.py  producer_to_kafka.py
src/prediction_model/: __init__.py  model_wrapper.py
src/prediction_model/output_transformer/: __init__.py  output_transformer.py
test/: __init__.py  test_batch_producer.py  test_model_wrapper_factory.py  test_output_transformer.py
